samples/_failures_safe/1761641426_498f71_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6327b52d.c: In function ‘cleanup_graph’:
./samples/SAFE/__tmp_6327b52d.c:182: error: expected ‘{’ at end of input
